--- a/src/view/windows/LogIn.fxml
+++ b/src/view/windows/LogIn.fxml
@@ -23,7 +23,7 @@
       </VBox>
       <HBox fx:id="hb_buttonbar" alignment="TOP_RIGHT" layoutX="108.0" layoutY="168.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <children>
-            <Button mnemonicParsing="false" onAction="#login" text="Einliggen" />
+            <Button mnemonicParsing="false" onAction="#login" text="Einloggen" />
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" />
