--- a/src/view/windows/LogIn.fxml
+++ b/src/view/windows/LogIn.fxml
@@ -12,9 +12,14 @@
             <Font size="23.0" />
          </font>
       </Label>
-      <VBox alignment="CENTER" layoutX="185.0" layoutY="76.0" prefHeight="68.0" prefWidth="470.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+      <VBox alignment="CENTER" layoutY="76.0" prefHeight="68.0" prefWidth="470.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <children>
-            <ChoiceBox fx:id="chb_profiles" prefWidth="150.0" />
+         <HBox alignment="CENTER" prefWidth="470.0" >
+         <children>
+            <Button fx:id="btn_edit" />
+            <ComboBox fx:id="cb_profiles" prefWidth="150.0" />
+         </children>
+         </HBox>
             <Button fx:id="btn_addProfile" mnemonicParsing="false" onAction="#addProfile" text="Neuer Benutzer">
                <VBox.margin>
                   <Insets top="5.0" />
